Add support for delivery authorization via API
